Added favicon to page. Finished second half of Batman's CV.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/png">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,31 +15,60 @@
 </head>
 
 <body>
-    <article>
-        <img src="assets/Image_Batman.png" alt="Caricatura de Batman">
-    </article>
+    <div class="batman_image">
+        <img class="batman" src="assets/Image_Batman.png" alt="Caricatura de Batman">
+    </div>
     <h1>
         CURRICULUM VITAE DE BRUCE WAYNE
     </h1>
-    <div></div>
+    <div class="spacer"></div>
     <h2>DATOS PERSONALES</h2>
     <ul>
         <li><b><i>Nombre completo:</i></b> Bruce Thomas Wayne</li>
         <li><b><i>Fecha de nacimiento:</i></b> 19/02/1968</li>
         <!--La fecha que la mayoría de la gente está de acuerdo que es canónica es el 19 de Febrero. Los papás de Bruce murieron en 1976, cuando Bruce tenía 8 años, por lo tanto nació en 1968.-->
-        <li><b><i>Lugar de nacimiento:</i></b> Gotham City</li>
+        <li><b><i>Lugar de nacimiento:</i></b> Gotham City, NJ</li>
     </ul>
     <h2>FORMACIÓN ACADÉMICA</h2>
     <pre>
         <b>1982-1984:</b> Cursos en diversas universidades de Europa
-                              Solo me quedaba un semestre
-        <b>          1983:</b> Bajo la tutela de Henri Ducard
-                              Entrenado en cazahombres
-        <b>          1984:</b> Bajo la tutela de Kirigi y otros shinobi
-                              Entrenado en furtividad
-        <b>          1984:</b> Bajo la tutela de Kirigi
-                              Entrenado en furtividad
+                           Solo me quedaba un semestre
+        <b>       1982:</b> Bajo la tutela de Ted Grant y David Cain
+                           Entrenado en combate mano-a-mano
+        <b>       1982:</b> Bajo la tutela de Oliver Queen
+                           Entrenado en arquería
+        <b>       1983:</b> Bajo la tutela de Henri Ducard
+                           Entrenado en cazahombres
+        <b>       1983:</b> Bajo la tutela de Henri Ducard
+                           Entrenado en cazahombres
+        <b>       1984:</b> Bajo la tutela de Kirigi y otros shinobi
+                           Entrenado en furtividad
+        <b>       1984:</b> Bajo la tutela de bosquimanos africanos
+                           Entrenado en caza
+     <b>1985-1988:</b> Bajo la tutela de Harvey Harris
+                           Entrenado en técnicas detectivescas
+     <b>1989-1993:</b> Bajo la tutela de Willie Doggett
+                           Entrenado en cazarrecompensas
+    </pre>
+    <h2>EXPERIENCIA LABORAL</h2>
+    <pre>
+        <b>1985-         :</b> Wayne Enterprises
+                            Presidente
+     <b>1985-         :</b> Gotham City
+                            Justiciero Independiente
+     <b>1986-         :</b> Bat-Familia
+                            Fundador y Líder
+     <b>1987-         :</b> Liga de la Justicia de América
+                            Fundador
     </pre>
 </body>
-
+<footer>
+    <p>0810 - BATMAN</p>
+    <a href="https://www.linkedin.com/company/dc-comics">
+        <img class="icon" src="assets/ico_linkedin.png" alt="Ícono de LinkedIn">
+    </a>
+    <a href="https://www.instagram.com/batman/">
+        <img class="icon" src="assets/ico_instagram.png" alt="Ícono de Instagram">
+    </a>
+</footer>
 </html>
