Small fix on "Formación Académica" section.

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                            Entrenado en arquería
         <b>       1983:</b> Bajo la tutela de Henri Ducard
                            Entrenado en cazahombres
-        <b>       1983:</b> Bajo la tutela de Henri Ducard
-                           Entrenado en cazahombres
+        <b>       1983:</b> Bajo la tutela de Chu Chin Li y Tsunemoto
+                           Entrenado en artes marciales
         <b>       1984:</b> Bajo la tutela de Kirigi y otros shinobi
                            Entrenado en furtividad
         <b>       1984:</b> Bajo la tutela de bosquimanos africanos
@@ -52,23 +52,23 @@
     </pre>
     <h2>EXPERIENCIA LABORAL</h2>
     <pre>
-        <b>1985-         :</b> Wayne Enterprises
-                            Presidente
-     <b>1985-         :</b> Gotham City
-                            Justiciero Independiente
-     <b>1986-         :</b> Bat-Familia
-                            Fundador y Líder
-     <b>1987-         :</b> Liga de la Justicia de América
-                            Fundador
+        <b>1985- :</b> Wayne Enterprises
+                   Presidente
+     <b>1985- :</b> Gotham City
+                   Justiciero Independiente
+     <b>1986- :</b> Bat-Familia
+                   Fundador y Líder
+     <b>1987- :</b> Liga de la Justicia de América
+                   Fundador
     </pre>
 </body>
 <footer>
     <p>0810 - BATMAN</p>
-    <a href="https://www.linkedin.com/company/dc-comics">
-        <img class="icon" src="assets/ico_linkedin.png" alt="Ícono de LinkedIn">
-    </a>
     <a href="https://www.instagram.com/batman/">
         <img class="icon" src="assets/ico_instagram.png" alt="Ícono de Instagram">
+    </a>
+    <a href="https://www.linkedin.com/company/dc-comics">
+        <img class="icon" src="assets/ico_linkedin.png" alt="Ícono de LinkedIn">
     </a>
 </footer>
 </html>
